# bers

./: Cargo.toml  README.md
examples/: server.rs
src/: connection.rs  lib.rs  motd.rs  reader.rs  server.rs  writer.rs
src/auth/: mod.rs
src/protocol/: mod.rs
src/protocol/crypto/: cipher.rs  ecdsa.rs  error.rs  jwt.rs  mod.rs
src/protocol/login/: exchange.rs  mod.rs  verify.rs
src/protocol/packets/: client_to_server_handshake.rs  disconnect.rs  login_packet.rs  mod.rs  play_status.rs  resource_packs_info.rs  server_to_client_handshake.rs
src/protocol/types/: player_data.rs
tests/: motd.rs
