[package]
name = "bers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
flate2 = "1.0"
byteorder = "1"
ring = "0.16.20"
base64 = "0.13.0"
aes-ctr = "0.6.0"
serde_json = "1.0"
simple_asn1 = "0.6.1"
static-dh-ecdh = "0.1.1"
minecraft-varint = "0.2.0"
tokio = {version = "*", features = ["full"]}
serde = {version = "1.0", features = ["derive"] }
raknet = {git = "https://github.com/360tetsu360/raknet-rs" }